--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,16 @@ body{
   background-color: #D9D9D9;
   max-width: 100%;
 }
+nav{
+  display: flex;
+  position: fixed;
+  padding: 1.3% 6%;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  background-color: #eb19eb;
+}
+.nav-links{
+  flex: 1;
+  text-align: center;
+}
