--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,15 @@ nav span{
   background-color: #e3c6ee;
   border-radius: 2rem 2rem 0rem 0rem;
 }
+.mobile{
+  padding: 8% 15%;
+  font-size: larger;
+  background-color: #d411c4;
+  border-radius: 0rem 0rem 1rem 1rem;
+}
+.mobile h3{
+  padding-top: 2rem;
+  padding-bottom: 0.5rem;
+}
+.mobile span{
+  color: #3a0232;
